[package]
name = "git-shining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
anyhow = "^1"
clap = { version = "^4", features = [ "derive" ] }
