[package]
name = "git-shining"
version = "0.2.1"
edition = "2021"
description = "Create art out of a yearly GitHub contribution graph"
authors = ["Erik Hollensbe <erik+github@hollensbe.org>"]
license = "MIT"
homepage = "https://github.com/erikh/git-shining"
repository = "https://github.com/erikh/git-shining"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
anyhow = "^1"
clap = { version = "^4", features = [ "derive" ] }
rusttype = "^0.9"
git2 = "^0.17"
rand = "^0.8"
